Today I made header of the page fixed on top of the website always, added some slogan text and made some decisions regarding future design of the page

--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
     <section class="first-section">
         <header>
             <div class="logo-tools">
-                <img src="/Assets/Images/jumeirah-logo.png" alt="Jumeirah Logo">
+                <a href="index.html"><img src="Assets/Images/jumeirah-logo.png" alt="Jumeirah Logo"></a>
                 <ul class="navigation">
-                    <li class="button-font" id="hotels"><a href="#"></a>HOTELS<img src="/Assets/Images/arrow-pointer.png" alt=""></li>
+                    <li class="button-font" id="hotels"><a href="#"></a>HOTELS<img src="Assets/Images/arrow-pointer.png" alt=""></li>
                     <li class="button-font"><a href="#"></a>BURJ AL ARAB</li>
-                    <li class="button-font"><a href="#"></a>LIFESTYLE<img src="/Assets/Images/arrow-pointer.png" alt=""></li>
+                    <li class="button-font"><a href="#"></a>LIFESTYLE<img src="Assets/Images/arrow-pointer.png" alt=""></li>
                     <li class="button-font"><a href="#"></a>OFFERS</li>
                     <li class="button-font"><a href="#"></a>LOYALTY</li>
                 </ul>
             </div>
             <button class="button-font">BOOK NOW</button>
+            <!-- Information div is temporary, just to demonstrate dropdowm menu. Later it will be fixed -->
             <div class="information">
                 <h3>Turdubek Zholdoshov</h3>
             </div>
         </header>
+        <h1 id="slogan">Stay Different</h1>
+        <h3 id="slogan_sub">Taking luxury hospitality to new heights</h3>
     </section>
 </body>
 </html>
