--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             <div class="logo-tools">
                 <a href="index.html"><img src="Assets/Images/jumeirah-logo.png" alt="Jumeirah Logo"></a>
                 <ul class="navigation">
-                    <li class="button-font" id="hotels"><a href="#"></a>HOTELS<img src="Assets/Images/arrow-pointer.png" alt=""></li>
+                    <li class="button-font expandable" id="hotels"><a href="#"></a>HOTELS<img src="Assets/Images/arrow-pointer.png" alt=""></li>
                     <li class="button-font"><a href="#"></a>BURJ AL ARAB</li>
-                    <li class="button-font"><a href="#"></a>LIFESTYLE<img src="Assets/Images/arrow-pointer.png" alt=""></li>
+                    <li class="button-font expandable"><a href="#"></a>LIFESTYLE<img src="Assets/Images/arrow-pointer.png" alt=""></li>
                     <li class="button-font"><a href="#"></a>OFFERS</li>
-                    <li class="button-font"><a href="#"></a>LOYALTY</li>
+                    <li class="button-font expandable"><a href="#"></a>LOYALTY<img src="Assets/Images/arrow-pointer.png" alt=""></li>
                 </ul>
             </div>
             <button class="button-font">BOOK NOW</button>
             <!-- Information div is temporary, just to demonstrate dropdowm menu. Later it will be fixed -->
-            <div class="information">
+            <div class="information invisible">
                 <h3>Turdubek Zholdoshov</h3>
             </div>
         </header>
