Information div changes its content depending on which link is active, close button in each page is added, added media queries to prevent displaying ugly page on smaller screens

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="icon" type="image/x-icon" href="Assets/Images/favicon.ico">
     <script src="Scripts/scripts.js" defer></script>
     <title>Jumeirah Hotels & Resorts | Luxury Hotels Europe, Middle East & Asia | Jumeirah</title>
+    <link rel="stylesheet" href="Styles/mqueries.css">
 </head>
 <body>
+    <h3 class="forever">Sorry, this page is not designed to be displayed on your device</h3>
     <section class="first-section">
         <header>
             <div class="logo-tools">
@@ -17,9 +19,9 @@
                 <ul class="navigation">
                     <li class="button-font expandable" id="hotels"><a href="#"></a>HOTELS<img src="Assets/Images/arrow-pointer.png" alt=""></li>
                     <li class="button-font"><a href="#"></a>BURJ AL ARAB</li>
-                    <li class="button-font expandable"><a href="#"></a>LIFESTYLE<img src="Assets/Images/arrow-pointer.png" alt=""></li>
+                    <li class="button-font expandable" id="lifestyle"><a href="#"></a>LIFESTYLE<img src="Assets/Images/arrow-pointer.png" alt=""></li>
                     <li class="button-font"><a href="#"></a>OFFERS</li>
-                    <li class="button-font expandable"><a href="#"></a>LOYALTY<img src="Assets/Images/arrow-pointer.png" alt=""></li>
+                    <li class="button-font expandable" id="loyalty"><a href="#"></a>LOYALTY<img src="Assets/Images/arrow-pointer.png" alt=""></li>
                 </ul>
             </div>
             <button class="button-font">BOOK NOW</button>
@@ -33,3 +35,5 @@
     </section>
 </body>
 </html>
+
+
