Pushing all the previous commits

--- a/chernovik.html
+++ b/chernovik.html
@@ -68,7 +68,7 @@
         <div class="wrapper3">
             <ul>
                 <li><a href="" class="upper">Bali</a></li>
-                <li><a href="">Coming Soon: Jumeirah Bali</a></li>
+                <li><a href="">Coming soon: Jumeirah Bali</a></li>
             </ul>
             <ul>
                 <li><a href="" class="upper">Guangzhou</a></li>
