I finished with LOYALTY informatio div and started with HOTELS information div bottom showcase

--- a/chernovik.html
+++ b/chernovik.html
@@ -1,21 +1,30 @@
-<button class='infoclose'><i class="fas fa-times"></i></button>
-<div class="info_container3">
-    <div class="infobox3">
-        <img src="Assets/Images/loyaltycollectionaboutjumeirahonehero__square.webp" alt="Jumeirah One">
+<div class="hotels_footer">
+    <div class="showcase_mother">
+        <img src="Assets/Images/hotelcollectionbeachlover__square.webp" alt="Beach Lover">
+        <div class="showcase_child">
+            <h3>For the Beach Lover</h3>
+            <p class="button-font">explore collection</p>
+        </div>
     </div>
-    <div class="infobox3">
-        <img src="Assets/Images/loyaltycollectioncollecthero__square.webp" alt="Jumeirah Collect">
+    <div class="showcase_mother">
+        <img src="Assets/Images/hotelcollectionislanderhero__square.webp" alt="Islander">
+        <div class="showcase_child">
+            <h3>For the Islander</h3>
+            <p class="button-font">explore collection</p>
+        </div>
     </div>
-    <div class="infobox3">
-        <img src="Assets/Images/loyaltycollectionexchangehero__square.webp" alt="Jumeirah Exchange">
+    <div class="showcase_mother">
+        <img src="Assets/Images/urban__square.webp" alt="Urbanist">
+        <div class="showcase_child">
+            <h3>For the Urbanist</h3>
+            <p class="button-font">explore collection</p>
+        </div>
     </div>
-    <div class="infobox3">
-        <img src="Assets/Images/loyaltycollectionpartnershero__square.webp" alt="Jumeirah Partners">
-    </div>
-    <div class="infobox3">
-        <img src="Assets/Images/loyaltycollectionoffershero__square.webp" alt="Jumeirah Offers">
-    </div>
-    <div class="infobox3">
-        <img src="Assets/Images/loyaltycollectionhelpsupporthero__square.webp" alt="Jumeirah Help & Support">
+    <div class="showcase_mother">
+        <img src="Assets/Images/hotelcollectionexclusivecollectionhero__square.webp" alt="Exclusive Collection">
+        <div class="showcase_child">
+            <h3>Exclusive Collection</h3>
+            <p class="button-font">explore collection</p>
+        </div>
     </div>
 </div>
