--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <a href="index.html"><img src="Assets/Images/jumeirah-logo.png" alt="Jumeirah Logo" class="main_logo"></a>
                 <ul class="navigation">
                     <li class="button-font expandable" id="hotels"><a href="#"></a>HOTELS<img src="Assets/Images/arrow-pointer.png" alt=""></li>
-                    <li class="button-font"><a href="#"></a>BURJ AL ARAB</li>
+                    <a href="https://www.jumeirah.com/en/stay/dubai/burj-al-arab-jumeirah" target="_blank"><li class="button-font">BURJ AL ARAB</li></a>
                     <li class="button-font expandable" id="lifestyle"><a href="#"></a>LIFESTYLE<img src="Assets/Images/arrow-pointer.png" alt=""></li>
-                    <li class="button-font"><a href="#"></a>OFFERS</li>
+                    <a href="https://www.jumeirah.com/en/offers" target="_blank"><li class="button-font">OFFERS</li></a>
                     <li class="button-font expandable" id="loyalty"><a href="#"></a>LOYALTY<img src="Assets/Images/arrow-pointer.png" alt=""></li>
                 </ul>
             </div>
-            <a href="https://www.jumeirah.com/en/booking/hotel-booking?bookingWithPoints=false"><button class="button-font" id="booknow">BOOK NOW</button></a>
+            <a href="https://www.jumeirah.com/en/booking/hotel-booking?bookingWithPoints=false" target="_blank"><button class="button-font" id="booknow">BOOK NOW</button></a>
             <!-- Information div is temporary, just to demonstrate dropdowm menu. Later it will be fixed -->
             <div class="information invisible">
                 <h3>Turdubek Zholdoshov</h3>
