Today I finished the first page of the project. All the links are working and also video is added as a background.

--- a/chernovik.html
+++ b/chernovik.html
@@ -3,28 +3,36 @@
         <img src="Assets/Images/hotelcollectionbeachlover__square.webp" alt="Beach Lover">
         <div class="showcase_child">
             <h3>For the Beach Lover</h3>
-            <p class="button-font">explore collection</p>
+            <a href="https://www.jumeirah.com/en/collection/beach-lover" target="_blank">
+            <p class="button-font">explore collection <img src="Assets/Images/arrow-pointer.png" alt=""></p>
+            </a>
         </div>
     </div>
     <div class="showcase_mother">
         <img src="Assets/Images/hotelcollectionislanderhero__square.webp" alt="Islander">
         <div class="showcase_child">
             <h3>For the Islander</h3>
-            <p class="button-font">explore collection</p>
+            <a href="https://www.jumeirah.com/en/collection/island-lover" target="_blank">
+            <p class="button-font">explore collection <img src="Assets/Images/arrow-pointer.png" alt=""></p>
+            </a>
         </div>
     </div>
     <div class="showcase_mother">
         <img src="Assets/Images/urban__square.webp" alt="Urbanist">
         <div class="showcase_child">
             <h3>For the Urbanist</h3>
-            <p class="button-font">explore collection</p>
+            <a href="https://www.jumeirah.com/en/collection/urban-lovers" target="_blank">
+            <p class="button-font">explore collection <img src="Assets/Images/arrow-pointer.png" alt=""></p>
+            </a>
         </div>
     </div>
     <div class="showcase_mother">
         <img src="Assets/Images/hotelcollectionexclusivecollectionhero__square.webp" alt="Exclusive Collection">
         <div class="showcase_child">
             <h3>Exclusive Collection</h3>
-            <p class="button-font">explore collection</p>
+            <a href="https://www.jumeirah.com/en/stay/exclusive-collection-inspiration" target="_blank">
+                <p class="button-font">explore collection <img src="Assets/Images/arrow-pointer.png" alt=""></p>
+            </a>
         </div>
     </div>
 </div>
