--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- This message is displayed only when the viewport falls below 1200px -->
     <h3 class="forever">Sorry, this page is not designed to be displayed on your device</h3>
     <section class="first-section">
+        <video id="bgr_video" src="Assets/Videos/Jumeirah, a global brand.mp4" autoplay muted loop></video>
         <header>
             <div class="logo-tools">
                 <a href="index.html"><img src="Assets/Images/jumeirah-logo.png" alt="Jumeirah Logo" class="main_logo"></a>
@@ -32,8 +33,30 @@
                 <h3>Turdubek Zholdoshov</h3>
             </div>
         </header>
+
         <h1 id="slogan">Stay Different</h1>
         <h3 id="slogan_sub">Taking luxury hospitality to new heights</h3>
+        
+        <div class="trio-showcase">
+            <div class="trio_first_child">
+                <h3>Exclusive Collection</h3>
+                <a href="https://www.jumeirah.com/en/stay/exclusive-collection-inspiration" target="_blank">
+                    <p class="button-font">luxury villa or suite stays <img src="Assets/Images/arrow-pointer.png" alt=""></p>
+                </a>
+            </div>
+            <div class="trio_second_child">
+                <h3>Make it special</h3>
+                <a href="https://www.jumeirah.com/en/occasion/business-meetings/meeting-collection" target="_blank">
+                    <p class="button-font">discover our venues <img src="Assets/Images/arrow-pointer.png" alt=""></p>
+                </a>
+            </div>
+            <div>
+                <h3>Stories to inspire</h3>
+                <a href="https://www.jumeirah.com/en/article/stories" target="_blank">
+                    <p class="button-font">awaken your wanderlust <img src="Assets/Images/arrow-pointer.png" alt=""></p>
+                </a>
+            </div>
+        </div>
     </section>
 
     <!--    Second section of the page which occupies next 100vh -->
